just made sure that my project is equal to instructor project